[package]
name = "sinkmap"
version = "1.0.0"
authors = ["Himadri Bhattacharjee <lavafroth@protonmail.com>"]
description = "Rust tool to extract JavaScript source code from sourcemap files"
edition = "2021"
readme = "README.md"
repository = "https://github.com/lavafroth/sinkmap"
license = "GPL-3.0"
categories = ["command-line-utilities"]

[dependencies]
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0.22", features = ["derive"] }
regex = "1"
color-eyre = "0.6.2"
